# agentic-gemini-rag

./: .env.example  .gitignore  pyproject.toml
src/config/: settings.py
tests/integration/: test_gemini_setup.py
tests/unit/: test_settings.py
